# evaluation_package

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
example_notebooks/: 00_Visualize_sequence.ipynb  01_ESR_eval.ipynb  02_Rabi_eval.ipynb  03_DAQ_read_eval.ipynb  04_casr_calibration.ipynb  05_CASR_sensitivity.ipynb
example_notebooks/example_data/: CASR_calibration_2025-09-09-14-20-19.npy  CASR_calibration_2025-09-09-14-20-19.yaml  CASR_sensitivity_2026-02-13-17-28-01.yaml  CASR_sensitivity_ch-0_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-10_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-11_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-12_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-13_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-14_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-15_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-16_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-17_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-18_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-19_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-1_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-20_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-21_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-22_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-23_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-24_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-25_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-26_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-27_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-28_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-29_2026-02-13-17-28-01.npy  CASR_sensitivity_ch-2_2026-02-13-17-28-01.npy  (+13 more)
(+15 files in other folders)
